fixed spacing on scrollspy and added image effect

--- a/css/main.css
+++ b/css/main.css
@@ -641,7 +641,7 @@ width:150px;
   text-align:center;
   padding-left:4em;
   padding-right:4em;
-  padding-top:2em;
+  padding-top:4em;
   padding-bottom:2em;
   border-top:1px solid rgb(206, 206, 206);
 }
